runFormatTest(import.meta, ["yaml"]);
runFormatTest(import.meta, ["yaml"], { proseWrap: "always", printWidth: 20 });
